static/css/style.css
.with-shadow {
  box-shadow: 0 0 4px rgba(0, 0, 0, 0.14), 0 4px 8px rgba(0, 0, 0, 0.28);
}
.transition {
  -webkit-transition: all 0.25s ease 0;
  -moz-transition: all 0.25s ease 0;
  -ms-transition: all 0.25s ease 0;
  -o-transition: all 0.25s ease 0;
  transition: all 0.25s ease 0;
}
* {
  padding: 0;
  margin: 0;
}
p {
  margin: 12px 0;
}
.full-height-card {
  background: white;
  color: #212121;
  box-shadow: 0 0 4px rgba(0, 0, 0, 0.14), 0 4px 8px rgba(0, 0, 0, 0.28);
  top: 75px;
  /* Height of header and nav */
  padding: 10px;
}
body {
  background: #ececec;
  color: #212121;
  height: 100%;
  font-family: Helvetica, Arial, sans-serif;
}
body #page-top {
  box-sizing: border-box;
  top: 0;
  line-height: 1;
  z-index: 22;
  color: white;
  background-color: #519500;
  height: 56px;
}
@media screen {
  body #page-top {
    content: "";
    left: -2%;
    width: 104%;
    display: block;
    position: fixed;
    box-shadow: 0 0 4px rgba(0, 0, 0, 0.14), 0 4px 8px rgba(0, 0, 0, 0.28);
  }
}
@media print {
  body #page-top {
    display: flex;
    position: static;
    margin: 0;
  }
}
body #page-top > div {
  padding: 8px 4%;
}
body #page-top > div .offset {
  position: relative;
  top: -15px;
  left: 6px;
}
body #page-top > div #header {
  position: relative;
  top: -15px;
  left: 6px;
  display: inline-block;
  padding: 9px 0;
  font-size: 1.5em;
  min-width: 180px;
  border-right: 1px solid rgba(255, 255, 255, 0.6);
  height: 26px;
}
body #page-top > div .heading-section {
  display: inline-block;
  height: 100%;
  padding: 12px;
  background: rgba(255, 255, 255, 0.15);
  box-shadow: 0 0 4px rgba(0, 0, 0, 0.14), 0 4px 8px rgba(0, 0, 0, 0.28);
}
body #page-top > div .heading-section * {
  margin: 0 6px;
  padding: 4px;
  border-radius: 2px;
  top: 0;
}
body #page-top > div #nav {
  position: relative;
  top: -15px;
  left: 6px;
  display: inline-block;
  height: 100%;
  padding: 12px;
  background: rgba(255, 255, 255, 0.15);
  box-shadow: 0 0 4px rgba(0, 0, 0, 0.14), 0 4px 8px rgba(0, 0, 0, 0.28);
}
body #page-top > div #nav * {
  margin: 0 6px;
  padding: 4px;
  border-radius: 2px;
  top: 0;
}
body #page-top > div #nav .nav-section {
  display: inline;
  padding: 0;
  margin: 0;
}
body #page-top > div #nav .nav-other .nav-link {
  background: white;
  box-shadow: 0 0 4px rgba(0, 0, 0, 0.14), 0 4px 8px rgba(0, 0, 0, 0.28);
}
body #page-top > div #nav .nav-current .nav-link {
  font-weight: bold;
  background: rgba(255, 255, 255, 0.9);
  box-shadow: 0 0 4px rgba(0, 0, 0, 0.14), 0 4px 8px rgba(0, 0, 0, 0.28);
}
body #page-top > div #github {
  position: absolute;
  top: 0;
  right: 2%;
  margin: 10px;
  padding: 0;
}
body #page-top > div #github div {
  position: absolute;
  top: 1px;
  right: -10px;
  min-width: 200px;
}
body #page-top > div #github div img {
  position: fixed;
  top: 12px;
  right: 0;
}
body #page-top > div #github div span {
  box-shadow: 0 0 4px rgba(0, 0, 0, 0.14), 0 4px 8px rgba(0, 0, 0, 0.28);
  position: relative;
  top: 10px;
  right: -30px;
  background: white;
  padding: 10px 4px;
  border-radius: 2px;
  height: 10px;
  min-width: 150px;
}
@media screen and (max-width: 800px) {
  body #page-top > div #github div span {
    display: none;
  }
}
@media screen and (max-width: 800px) {
  body #page-top > div #github div {
    width: 60px;
  }
}
body #page-mid #content {
  background: #dddddd;
  margin: 10px;
  padding: 10px;
  top: 75px;
  /* Height of header and nav */
  right: 30%;
  left: 2%;
  position: absolute;
}
body #page-mid #content .section {
  background-color: #dddddd;
  box-sizing: border-box;
  padding: 10px 8px;
  margin-bottom: 50px;
  position: relative;
  border-radius: 2px;
}
@media print {
  body #page-mid #content .section {
    background: none;
    margin: 0;
    padding: 0;
  }
}
body #page-mid #content .section > :first-child {
  page-break-after: avoid;
  margin: 0;
  font-weight: bold;
  font-size: 1.5em;
  color: #365d00;
  padding: 6px 6px 0;
  border-radius: 2px;
}
@media print {
  body #page-mid #content .section > :first-child {
    margin-top: 8px;
    margin-right: 0;
    margin-left: 0;
    margin-bottom: 8px;
  }
}
body #page-mid #content .accordion {
  -webkit-transition: all 0.25s ease 0;
  -moz-transition: all 0.25s ease 0;
  -ms-transition: all 0.25s ease 0;
  -o-transition: all 0.25s ease 0;
  transition: all 0.25s ease 0;
}
body #page-mid #content .accordion .heading {
  color: #365d00;
  margin: 10px;
  margin-top: 40px;
  -webkit-transition: all 0.25s ease 0;
  -moz-transition: all 0.25s ease 0;
  -ms-transition: all 0.25s ease 0;
  -o-transition: all 0.25s ease 0;
  transition: all 0.25s ease 0;
}
body #page-mid #content .accordion div {
  background: white;
  box-shadow: 0 0 4px rgba(0, 0, 0, 0.14), 0 4px 8px rgba(0, 0, 0, 0.28);
  margin: 10px;
  padding: 10px;
}
body #page-mid #content .accordion .collapsible {
  visibility: visible;
  height: auto;
  margin-bottom: 20px;
  -webkit-transition: all 0.25s ease 0;
  -moz-transition: all 0.25s ease 0;
  -ms-transition: all 0.25s ease 0;
  -o-transition: all 0.25s ease 0;
  transition: all 0.25s ease 0;
}
body #page-mid #content .accordion .collapsible > * {
  -webkit-transition: all 0.25s ease 0;
  -moz-transition: all 0.25s ease 0;
  -ms-transition: all 0.25s ease 0;
  -o-transition: all 0.25s ease 0;
  transition: all 0.25s ease 0;
}
@media screen {
  body #page-mid #content .contracted {
    background: white;
    margin: 0;
    padding: 5px;
    box-shadow: 0 0 4px rgba(0, 0, 0, 0.14), 0 4px 8px rgba(0, 0, 0, 0.28);
  }
  body #page-mid #content .contracted .heading {
    margin: 5px;
    padding: 0;
    font-size: 1.2em;
  }
  body #page-mid #content .contracted .collapsible {
    margin: 0;
    padding: 0;
  }
  body #page-mid #content .contracted .collapsible > * {
    height: 0;
    font-size: 0;
    margin: 0;
    padding: 0;
  }
}
body #page-mid #sidebar {
  background: white;
  color: #212121;
  box-shadow: 0 0 4px rgba(0, 0, 0, 0.14), 0 4px 8px rgba(0, 0, 0, 0.28);
  top: 75px;
  /* Height of header and nav */
  padding: 10px;
  position: fixed;
  right: 2px;
  left: 72%;
}
body #footer {
  box-sizing: border-box;
  bottom: 0;
  left: 0;
  right: 0;
  line-height: 1;
  z-index: 22;
  color: white;
  background-color: #519500;
  text-align: right;
  margin: auto;
  padding: 2px;
  padding-right: 4%;
  padding-left: 52%;
  height: 24px;
}
@media screen {
  body #footer {
    content: "";
    left: -2%;
    width: 104%;
    display: block;
    position: fixed;
    box-shadow: 0 0 4px rgba(0, 0, 0, 0.14), 0 4px 8px rgba(0, 0, 0, 0.28);
  }
}
@media print {
  body #footer {
    display: flex;
    position: static;
    margin: 0;
  }
}
.headshot {
  display: inline-block;
  background-image: url(http://www.gravatar.com/avatar/0c85ef5eb7678857e2a6b793dfe055a3.png);
  background-size: 40px 40px;
  width: 40px;
  height: 40px;
  border-radius: 50%;
}
.nav-sub {
  z-index: 30;
  position: absolute;
  visibility: hidden;
  height: 0;
  margin-top: 6px;
  -webkit-transition: all 0.25s ease 0;
  -moz-transition: all 0.25s ease 0;
  -ms-transition: all 0.25s ease 0;
  -o-transition: all 0.25s ease 0;
  transition: all 0.25s ease 0;
}
.nav-sub div {
  -webkit-transition: all 0.25s ease 0;
  -moz-transition: all 0.25s ease 0;
  -ms-transition: all 0.25s ease 0;
  -o-transition: all 0.25s ease 0;
  transition: all 0.25s ease 0;
  visibility: none;
  height: 0;
  padding: 2px;
}
.nav-sub div a {
  font-size: 0;
  padding: 2px;
  -webkit-transition: all 0.25s ease 0;
  -moz-transition: all 0.25s ease 0;
  -ms-transition: all 0.25s ease 0;
  -o-transition: all 0.25s ease 0;
  transition: all 0.25s ease 0;
}
.nav-sub-shown {
  position: absolute;
  visibility: visible;
  opacity: 1;
  height: auto;
  -webkit-transition: all 0.25s ease 0;
  -moz-transition: all 0.25s ease 0;
  -ms-transition: all 0.25s ease 0;
  -o-transition: all 0.25s ease 0;
  transition: all 0.25s ease 0;
}
.nav-sub-shown div {
  margin: 2px;
  margin-bottom: 8px;
  visibility: visible;
  opacity: 1;
  height: auto;
}
.nav-sub-shown div a {
  background: white;
  box-shadow: 0 0 4px rgba(0, 0, 0, 0.14), 0 4px 8px rgba(0, 0, 0, 0.28);
  font-size: inherit;
}
/* Dimensions */
hr {
  margin: 1em;
}
ul li {
  padding: 0.5em;
  list-style-position: inside;
}

